testimonial slider brand alignment fixed

--- a/src/scss/pages/_home02.scss
+++ b/src/scss/pages/_home02.scss
@@ -1,6 +1,8 @@
 // Banner Starts Here
 .brand-area-image {
   display: flex !important;
+  align-items: center;
+  height: 60px;
 }
 
 .banner-two {
